
NEW FUNCTIONS

   o Mathematical operations are now supported for images.
   For example:   inc <- atan(bei.extra$grad) * 180/pi
   See help(Math.im)

   o interp.colours
   Interpolate a sequence of colour values.

   o anyDuplicated.ppp, anyDuplicated.ppx
   Fast replacements for any(duplicated(x)) for point patterns.

SIGNIFICANT USER-VISIBLE CHANGES

   o plot.im
   The default colour map for plotting images,
   specified by spatstat.options('image.colfun'), 
   has been changed to a perceptually uniform map.

   o pairorient
   Labels and descriptions of columns have been corrected.

   o ppp
   Accelerated.

   o Gcom, Gres
   When conditional=TRUE and restrict=TRUE, the Hanisch estimate
   was not calculated exactly as described in Appendix E.1 of 
   Baddeley, Rubak and Moller (2011). The intensity was estimated 
   on the full window rather than the eroded window.
   Fixed.   

   o print.slrm
   Output now respects options('width')

BUG FIXES

   o markcorrint
   Results were completely incorrect.
   Bug introduced in spatstat 1.39-0, october 2014.
   Fixed.

   o Kinhom
   Ignored argument 'reciplambda2' in some cases.
   Bug introduced in spatstat 1.39-0, october 2014.
   Fixed.

   o $<-.hyperframe
   Columns containing character values were converted to factors.
   Fixed.

   o relrisk
   A small fraction of pixel values were sometimes wildly inaccurate
   due to numerical errors. This affected the range of values
   in the result, and therefore the appearance of plots.
   Fixed.

   o profilepl
   Crashed in some cases when the interaction was multitype.
   [Spotted by Andrew Lister.]
   Fixed.

   o profilepl
   Crashed if the model involved covariates that were not
   given in a 'data' argument.
   Fixed.

   o relrisk
   Did not accept a character string value for the argument 'case'.
   Fixed.

   o plot.ppp
   Warned about NA values amongst the marks, even if there were no NA's